# Python_Estudos

./: Banco.py  README.md
01 - Estrutura de dados/03 - Conjuntos/: 00_declarando_conjuntos.py
02 - Classes e objetos/: 01_desafio_bicicletaria.py
03 - Gerenciamento de pacotes/: 01_boas_praticas.py
04 - Banco de dados/: 01_conexao.py  01_dbapi.py  02_injecao_sql.py  03_transacao.py  meu_banco.db
05 - Desenvolvimento de APIS com Flask/Bank/: pyproject.toml
05 - Desenvolvimento de APIS com Flask/Bank/src/: app.py
Classes e objetos/: 01_desafio_bicicletaria.py
