[project]
name = "bank"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Prates",email = "fdspr4tes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
